added number feedback for digitspan

--- a/Digit_Span/default_style.css
+++ b/Digit_Span/default_style.css
@@ -367,3 +367,12 @@ label.jspsych-poldrack-survey-multi-choice-text input[type="radio"] {
 .jspsych-survey-multi-choice-nav {
   padding-top: 20px;
 }
+
+
+.numresponse {
+    font-size: 250%;
+    bottom: 10px;
+    position: relative;
+    color: blue;
+}
+
